@@ -922,40 +922,43 @@ if test @$1 = @--help -o @$1 = @-h -o @$1 = @-?; then
     echo "Usage: rescan-scsi-bus.sh [options] [host [host ...]]"
     echo "Options:"
     echo " -a      scan all targets, not just currently existing [default: disabled]"
+    echo " -c      enables scanning of channels 0 1   [default: 0 / all detected ones]"
     echo " -d      enable debug                       [default: 0]"
+    echo " -f      flush failed multipath devices     [default: disabled]"
+    echo " -h      help: print this usage message then exit"
+    echo " -i      issue a FibreChannel LIP reset     [default: disabled]"
     echo " -l      activates scanning for LUNs 0--7   [default: 0]"
     echo " -L NUM  activates scanning for LUNs 0--NUM [default: 0]"
-    echo " -w      scan for target device IDs 0--15   [default: 0--7]"
-    echo " -c      enables scanning of channels 0 1   [default: 0 / all detected ones]"
     echo " -r      enables removing of devices        [default: disabled]"
-    echo " -f      flush failed multipath devices     [default: disabled]"
-    echo " -i      issue a FibreChannel LIP reset     [default: disabled]"
-    echo " -u      look for existing disks that have been remapped"
     echo " -s      look for resized disks and reload associated multipath devices, if applicable"
+    echo " -u      look for existing disks that have been remapped"
+    echo " -w      scan for target device IDs 0--15   [default: 0--7]"
     echo "--alltargets:    same as -a"
-    echo "--remove:        same as -r"
-    echo "--flush:         same as -f"
-    echo "--issue-lip:     same as -i"
-    echo "--wide:          same as -w"
-    echo "--forcerescan:   Rescan existing devices"
-    echo "--forceremove:   Remove and readd every device (DANGEROUS)"
-    echo "--nooptscan:     don't stop looking for LUNs is 0 is not found"
-    echo "--color:         use coloured prefixes OLD/NEW/DEL"
-    echo "--hosts=LIST:    Scan only host(s) in LIST"
-    echo "--channels=LIST: Scan only channel(s) in LIST"
-    echo "--ids=LIST:      Scan only target ID(s) in LIST"
-    echo "--luns=LIST:     Scan only lun(s) in LIST"  
-    echo "--sync/nosync:   Issue a sync / no sync [default: sync if remove]"
     echo "--attachpq3:     Tell kernel to attach sg to LUN 0 that reports PQ=3"
-    echo "--reportlun2:    Tell kernel to try REPORT_LUN even on SCSI2 devices"
+    echo "--channels=LIST: Scan only channel(s) in LIST"
+    echo "--color:         use coloured prefixes OLD/NEW/DEL"
+    echo "--flush:         same as -f"
+    echo "--forceremove:   Remove and readd every device (DANGEROUS)"
+    echo "--forcerescan:   Rescan existing devices"
+    echo "--help:          print this usage message then exit"
+    echo "--hosts=LIST:    Scan only host(s) in LIST"
+    echo "--ids=LIST:      Scan only target ID(s) in LIST"
+    echo "--issue-lip:     same as -i"
     echo "--largelun:      Tell kernel to support LUNs > 7 even on SCSI2 devs"
-    echo "--sparselun:     Tell kernel to support sparse LUN numbering"
-    echo "--update:        same as -u"
+    echo "--luns=LIST:     Scan only lun(s) in LIST"  
+    echo "--nooptscan:     don't stop looking for LUNs is 0 is not found"
+    echo "--remove:        same as -r"
+    echo "--reportlun2:    Tell kernel to try REPORT_LUN even on SCSI2 devices"
     echo "--resize:        same as -s"
-    echo " Host numbers may thus be specified either directly on cmd line (deprecated) or"
-    echo " or with the --hosts=LIST parameter (recommended)."
+    echo "--sparselun:     Tell kernel to support sparse LUN numbering"
+    echo "--sync/nosync:   Issue a sync / no sync [default: sync if remove]"
+    echo "--update:        same as -u"
+    echo "--wide:          same as -w"
+    echo ""
+    echo "Host numbers may thus be specified either directly on cmd line (deprecated)"
+    echo "or with the --hosts=LIST parameter (recommended)."
     echo "LIST: A[-B][,C[-D]]... is a comma separated list of single values and ranges"
-    echo " (No spaces allowed.)"
+    echo "(No spaces allowed.)"
     exit 0
 fi
 
